[workspace]
members = ["bench", "kernel", "utils"]
resolver = "2"

[patch.crates-io]
tezos-smart-rollup = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-host = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-core = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-mock = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-encoding = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-entrypoint = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-debug = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-panic-hook = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-storage = { git = "https://gitlab.com/tezos/tezos.git" }
tezos_crypto_rs = { git = "https://gitlab.com/tezos/tezos.git" }
tezos_data_encoding = { git = "https://gitlab.com/tezos/tezos.git" }

[workspace.dependencies]
alloy-sol-types = "1.1.0"

[workspace.dependencies.bincode]
version = "2.0.0-rc.3"
features = ["serde"]

[workspace.dependencies.revm]
version = "23.1.0"
features = ["serde"]

[workspace.dependencies.tezos-smart-rollup]
version = "0.2.2"
default-features = false
features = [
  "std",
  "crypto",
  "panic-hook",
  "data-encoding",
  "proto-alpha",
  "experimental-host-in-memory-store",
  "extra",
  "native-kernel",
]

[workspace.dependencies.jstz_crypto]
git = "https://github.com/jstz-dev/jstz.git"

[workspace.dependencies.serde]
version = "1.0.197"
features = ["derive"]

[workspace.dependencies.tezos_crypto_rs]
version = "0.6.0"
git = "https://gitlab.com/tezos/tezos.git"
default-features = false

[workspace.dependencies.tezos_data_encoding]
version = "0.6.0"
git = "https://gitlab.com/tezos/tezos.git"
default-features = false
