[package]
name = "inbox-bench"
version = "0.0.0"
edition = "2021"

[dependencies]
jstz_crypto.workspace = true
tezos-smart-rollup.workspace = true
bincode.workspace = true
tezos_data_encoding.workspace = true
alloy-sol-types.workspace = true
revm.workspace = true
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
utils = { path = "../utils" }
