[package]
name = "revm-kernel"
version = "0.0.0"
edition = "2021"

[dependencies]
alloy-sol-types.workspace = true
bincode.workspace = true
tezos-smart-rollup.workspace = true
tezos_crypto_rs.workspace = true
revm.workspace = true
serde_json.workspace = true
utils = { path = "../utils" }

[features]
default = []
static-inbox = []
